--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.google.firebase:firebase-firestore:21.4.1'
+
+    implementation 'com.google.firebase:firebase-database:19.2.1'
 }
